Bug 290091 - Blanks lost on loading
Summary: Blanks lost on loading
Status: RESOLVED FIXED
Alias: None
Product: calligracommon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Calligra Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-29 13:18 UTC by T Zachmann
Modified: 2012-01-02 14:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Document showing the problem (9.30 KB, application/vnd.oasis.opendocument.text)
2011-12-29 13:18 UTC, T Zachmann
Details
Document showing the problem (9.59 KB, application/vnd.oasis.opendocument.text)
2012-01-02 13:43 UTC, T Zachmann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description T Zachmann 2011-12-29 13:18:57 UTC
Created attachment 67222 [details]
Document showing the problem

Version:           unspecified
OS:                Linux

When loading the attached document, some of the blanks are lost. These blanks are there after a line-break.

Reproducible: Didn't try

Steps to Reproduce:
Load the attached document

Actual Results:  
The number of blanks in the last rows of the document is not as it should be

Expected Results:  
The number of blanks should be as noted in the document.
Comment 1 T Zachmann 2012-01-02 13:43:05 UTC
Created attachment 67339 [details]
Document showing the problem

Updated version showing more problems of wrong whitespace handling.
Comment 2 T Zachmann 2012-01-02 14:07:11 UTC
Git commit 16bc36adc6a6ead69e21e98e770411a7d6a8da81 by Thorsten Zachmann.
Committed on 02/01/2012 at 14:53.
Pushed by zachmann into branch 'master'.

Fix whitespace handling in xml loading

This changes the xml loading to no longer strip whitespace. This fixes one of the
problems attached to the bug report where there is a text node with only a space
e.g. <text:line-break/> <text:s/>2 space.
This change uncovered some problems where white space was not handled properly:
anchors and line-breaks in filters, frame element loading in libs.
It also fixes saving of line-break to use the correct tag instead of the QChar::LineSperator as char.
Also whitespace handling after tabs, bookmark-ref and when variables are used have been fixed.

REVIEW: 103568

M  +2    -2    filters/libmsooxml/MsooXmlCommonReaderDrawingMLImpl.h
M  +2    -2    filters/words/docx/DocxXmlDocumentReader.cpp
M  +28   -20   libs/flake/KoShapeRegistry.cpp
M  +21   -3    libs/kotext/opendocument/KoTextLoader.cpp
M  +1    -1    libs/odf/KoXmlReader.h
M  +1    -0    libs/odf/KoXmlWriter.cpp

http://commits.kde.org/calligra/16bc36adc6a6ead69e21e98e770411a7d6a8da81