libs/odf/KoXmlReader.h
@@ -274,7 +274,7 @@ private:
 class KOODF_EXPORT KoXmlDocument: public KoXmlNode
 {
 public:
-    KoXmlDocument(bool stripSpaces = true);
+    KoXmlDocument(bool stripSpaces = false);
     KoXmlDocument(const KoXmlDocument& node);
     KoXmlDocument& operator=(const KoXmlDocument& node);
     bool operator==(const KoXmlDocument&) const;
